[tool.poetry]
name = "python-wiki-api"
version = "0.1.0"
authors = ["zazhka <alexander.zanousky@gmail.com>"]
description = "The wikipedia API based on hypermodern python"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Zazhka/python_wiki_api"
repository = "https://github.com/Zazhka/python_wiki_api"
keywords = ["wikiapi"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.24.0"
flake8-isort = "^4.0.0"
desert = "^2020.1.6"
marshmallow = "^3.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {version = "^5.3", extras = ["toml"]}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
safety = "^1.9.0"
mypy = "^0.790"
pytype = {version = "^2020.11.12", python = "3.8"}
typeguard = "^2.10.0"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.5"
xdoctest = "^0.15.0"
Sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"

[tool.poetry.scripts]
python-wiki-api = "python_wiki_api.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_wiki_api"]

[tool.coverage.report]
fail_under = 100
show_missing = true
